<resources>
    <string name="app_name">ChronosApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Email: email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"><font fgcolor='#FFFFFF'>Home</font></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_title"><font fgcolor='#FFFFFF'>Navigation</font></string>
    <string name="nav_settings"><font fgcolor='#FFFFFF'>Settings</font></string>
    <string name="todolist1"><font fgcolor='#FFFFFF'>Example list 1</font></string>
    <string name="todolist2"><font fgcolor='#FFFFFF'>Example list 2</font></string>
    <string name="todolist3"><font fgcolor='#FFFFFF'>Example list 3</font></string>
    <string name="todolist4"><font fgcolor='#FFFFFF'>Example list 4</font></string>
    <string name="nav_night_mode"><font fgcolor='#FFFFFF'>Notifications</font></string>
    <string name="nav_preferences"><font fgcolor='#FFFFFF'>Preferences</font></string>
    <string name="nav_account"><font fgcolor='#FFFFFF'>Account</font></string>
    <string name="title_activity_list_of_to_do_lists">Your Lists</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="testTextOf2Activity">List of ToDoLists</string>
    <string name="start2activity">Start2Activity</string>
    <string name="page_1">page_1</string>
    <string name="page_2">page_2</string>
    <string name="page_3">page_3</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_placeholder">Title</string>
    <string name="subtitle_placeholder">Subtitle</string>
    <string name="description_placeholder">Description placeholder</string>
    <string name="nav_about_us"><font fgcolor='#FFFFFF'>About us</font></string>
    <string name="add_new_list_dialog_edittext_hint">Enter list name</string>
    <string name="addNewTaskButtonText">new Task</string>
    <string name="addNewBillButtonText">new Bill</string>
    <string name="restart_password">Please enter your email to restart your password.</string>
    <string name="welcome_msg">Let\'s start the adventure together!</string>
    <string name="empty_login">Login</string>
    <string name="empty_verify">Verify</string>
    <string name="email_verify_window_text">Write code given in email into field.\n In case of not receiving code in few minutes, click send again button.</string>

    <string-array name="listItemTitles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="listItemDescription">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>


    <array name="listItemBackgrounds">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>

    <string name="add">Add+</string>
    <string name="zadanie1">zadanie3</string>
    <string name="zadanie2">zadanie3</string>
    <string name="zadanie3">zadanie3</string>
    <string name="Lista1">Lista1</string>
    <string name="Lista2">Lista2</string>
    <string name="Lista3">Lista3</string>
    <string name="add_event">add event</string>
    <string name="creating_a_new_task">Creating a new task</string>
    <string name="creating_task">Creating task</string>
    <string name="godzina">Godzina</string>
    <string name="malo_istotny">Mało istotny</string>
    <string name="najwazniejszy">Najważniejszy</string>
    <string name="data">Data</string>
    <string name="tworzenie_zadania">Tworzenie zadania</string>
    <string name="prorytet_zadania">Prorytet zadania:</string>
    <string name="nazwa_zadania">"Nazwa zadania"</string>
    <string name="normalny">Normalny</string>
    <string name="stworz">Stwórz</string>
    <string name="zadania_domowe">Zadania Domowe</string>
    <string name="oplaty">Opłaty</string>
    <string name="prace_domowe">Prace domowe</string>
    <string name="dd_mm_yyyy">dd.mm.yyyy</string>
    <string name="hh_mm">hh:mm</string>
    <string name="addItemTaskDesc">Opis zadania</string>
    <string name="editListNameTitle">Edit list name</string>
    <string name="edit_list_dialog_edittext_hint">Enter new list name</string>

    <string name="dfsadfa">dfsadfa</string>
    <string name="sample">Sample</string>
    <string name="ocr">OCR</string>
    <string name="capture">Capture</string>
    <string name="my_data">My Data</string>
    <string name="user_data">User Data</string>
    <string name="name">Name</string>
    <string name="account_number">Account Number</string>
    <string name="save">Save</string>
    <string name="generate_qr">Generate QR</string>
    <string name="date_dd_mm_yyyy">(Date) dd.mm.yyyy</string>
</resources>