<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/medium_bar">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/titleOnBackground"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:layout_alignBottom="@id/backgroundImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/title_placeholder"/>

        <TextView
            android:id="@+id/subTitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/backgroundImage"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="8dp"
            android:text="@string/subtitle_placeholder" />

        <TextView
            android:id="@+id/listDescription"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_below="@id/subTitle"
            android:padding="8dp"
            android:text="@string/description_placeholder" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>

