<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/layout_click_fix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/medium_bar"
    android:weightSum="20"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            >
            <ImageView
                android:id="@+id/back_to_login"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="249dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:src="@drawable/logo_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18dp"
                android:text="@string/welcome_msg"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:background="@drawable/login_back"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/login_edit"
                android:elevation="1dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/empty_verify"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/repeatSendEmail"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/login_button_effects"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Send code again"
                    android:textAllCaps="false"
                    android:textSize="10dp"

                    app:backgroundTint="@null" />


            </LinearLayout>

            <Button
                android:id="@+id/VerifyProceed"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="1dp"
                app:backgroundTint="@null"
                android:background="@drawable/login_button_effects"
                android:fontFamily="@font/roboto_regular"
                android:text="Continue"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <!--suppress AndroidUnresolvableTag -->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email_verify_window_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp"
                tools:ignore="Suspicious0dp" />

        </LinearLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="© AlgoLearn Team 2021"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>